[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/WFpanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/Title.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/2DUI/WayPoint.gd" type="Script" id=3]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/wfRichText.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_notification_short_digital_futuristic_beep_generic_008_53944.mp3.ogg" type="AudioStream" id=6]

[node name="WayPoint" type="Control"]
modulate = Color( 0.109804, 0.780392, 0.780392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 45.0
margin_bottom = 7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemSelect" parent="." instance=ExtResource( 1 )]
anchor_top = 0.0403646
anchor_right = 0.36164
anchor_bottom = 1.03385
margin_right = 3.05176e-05
border = false

[node name="MarginContainer" type="MarginContainer" parent="SystemSelect"]
margin_right = 988.0
margin_bottom = 1525.0
custom_constants/margin_right = 10
custom_constants/margin_top = 24
custom_constants/margin_left = 10
custom_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="SystemSelect/MarginContainer"]
margin_left = 10.0
margin_top = 24.0
margin_right = 978.0
margin_bottom = 1501.0

[node name="Label" type="Label" parent="SystemSelect/MarginContainer/VBoxContainer"]
margin_right = 968.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 2 )
text = "Systems"
align = 1

[node name="HSeparator" type="HSeparator" parent="SystemSelect/MarginContainer/VBoxContainer"]
margin_top = 65.0
margin_right = 968.0
margin_bottom = 69.0

[node name="SystemList" type="VBoxContainer" parent="SystemSelect/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 968.0
margin_bottom = 73.0
custom_constants/separation = 10

[node name="WFpanel" parent="." instance=ExtResource( 1 )]
anchor_left = 0.351391
anchor_top = 0.0598958
anchor_right = 1.00073
anchor_bottom = 0.88151
border = false

[node name="MarginContainer" type="MarginContainer" parent="WFpanel"]
margin_right = 1773.0
margin_bottom = 1261.0
custom_constants/margin_right = 18
custom_constants/margin_top = 30
custom_constants/margin_left = 18
custom_constants/margin_bottom = 30

[node name="RichTextLabel" parent="WFpanel/MarginContainer" instance=ExtResource( 5 )]
margin_left = 18.0
margin_top = 30.0
margin_right = 1755.0
margin_bottom = 1231.0
custom_constants/line_separation = 5
bbcode_enabled = true

[node name="Label" type="Label" parent="."]
margin_left = 444.997
margin_top = -4.4949
margin_right = 822.997
margin_bottom = 48.5051
custom_fonts/font = ExtResource( 2 )
text = "Way Point"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -860.0
margin_top = -74.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="Control"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -42.0
margin_right = -18.0
margin_bottom = 29.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "sfx"

[node name="Entered" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
pitch_scale = 1.28
bus = "sfx"
[connection signal="finished" from="." to="." method="_on_WayPoint_finished"]
[connection signal="visibility_changed" from="." to="." method="_on_WayPoint_visibility_changed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
